Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,10 @@ header ul a strong {
   color:#222;
 }
 
+header h1, header h2, header h3 {
+  margin: 0 0 10px;
+}
+
 section {
   width:520px;
   float:left;
@@ -210,7 +214,7 @@ footer {
     border:1px solid #e5e5e5;
     border-width:0 0 1px;
     padding-right:320px;
-    margin:0;
+    margin:0 0 10px;
   }
   
   section {
@@ -227,11 +231,6 @@ footer {
     right:50px;
     top:52px;
   }
-
-  header h1, header h2 {
-    margin: 0 0 10px;
-  }
-  
 
   footer {
     margin:0;
